# gtk-inotify

./: CMakeLists.txt  main.c
resources/: custom.css  inotifyapp.gresource.xml  window.ui
src/: inotify_app.c  inotify_app.h  inotify_app_win.c  inotify_app_win.h
